<resources>
    <string name="app_name">Calculadora Cidadão</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">peraltadesenvolvimento@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="valor_futuro_title">Simule o valor futuro de um capital</string>
    <string name="prestacao_fixa_title">Simule o financiamento com prestações fixas</string>
    <string name="prestacao_fixa_menu_title">Prestações Fixas</string>
    <string name="dep_regular_menu_title">Depósitos Regulares</string>
    <string name="val_futuro_capital">Valor futuro</string>
    <string name="num_meses">Nº. de meses</string>
    <string name="taxa_juros_mensal">Taxa de juros mensal %</string>
    <string name="valor_prestaçao">Valor da prestação</string>
    <string name="msg_valor_deposito">(depósito realizado no início do mês)</string>
    <string name="msg_valor_prestacao">(Considera-se que a 1a. prestação não seja no ato)</string>
    <string name="valor_financiado">Valor financiado</string>
    <string name="msg_valor_financiado">(O valor financiado não inclui o valor da entrada)</string>
    <string name="error_msg_calc">Informe 3 valores e pressione o botão Calcular para obter o 4º</string>
    <string name="calcular">Calcular</string>
    <string name="limpar">Limpar</string>
    <string name="exemplo">Exemplos</string>
    <string name="correcao_valores">Correção de valores</string>
    <string name="indice_preco">Índices de preços</string>
    <string name="tr">TR</string>
    <string name="poupanca">Poupança</string>
    <string name="selic">Selic</string>
    <string name="apps">+ Apps</string>
    <string name="cdi">CDI</string>
    <string name="outros">Outros</string>
    <string name="politica">Política de Privacidade</string>
    <string name="versao">Versão</string>
    <string name="home">Home</string>
    <string name="deposito_regular_title">Simule a aplicação com depósitos regulares</string>
    <string name="valor_deposito_regular">Valor do depósito regular</string>
    <string name="valor_obtido_final">Valor obtido ao final</string>
    <string name="capital_atual">Capital atual</string>
    <string name="correção_valor_indices_precos">Correção de valor por índices de preços</string>
    <string name="sel_indice_correção">Selecione o índice para a correção</string>
    <string name="valor_ser_corrigido">Valor a ser corrigido </string>
    <string name="data_inicial">Data inicial (MM/AAAA)</string>
    <string name="data_final">Data final (MM/AAAA)</string>
    <string name="inclui_taxa_inicial">(Inclui a taxa do mês inicial)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
