<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools" android:id="@+id/mobile_navigation"
            app:startDestination="@id/homeFragment">

    <fragment android:id="@+id/prestacaoFixaFragment"
              android:name="com.dev.peralta.calculadoracidadao.ui.PrestacaoFixaFragment"
              android:label="@string/app_name" tools:layout="@layout/prestacao_fixa_fragment">
        <action android:id="@+id/action_prestacaoFixaFragment_to_exemploFragment"
                app:destination="@id/exemploFragment" app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim" app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>
    <fragment android:id="@+id/homeFragment" android:name="com.dev.peralta.calculadoracidadao.ui.HomeFragment"
              android:label="@string/home" tools:layout="@layout/fragment_home"/>
    <fragment android:id="@+id/exemploFragment" android:name="com.dev.peralta.calculadoracidadao.ui.ExemploFragment"
              android:label="@string/exemplo" tools:layout="@layout/fragment_exemplo"/>
    <fragment android:id="@+id/depositoRegularFragment"
              android:name="com.dev.peralta.calculadoracidadao.ui.DepositoRegularFragment"
              android:label="fragment_deposito_regular" tools:layout="@layout/fragment_deposito_regular">
        <action android:id="@+id/action_depositoRegularFragment_to_exemploFragment"
                app:destination="@id/exemploFragment" app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim" app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>
</navigation>